--- a/static_media/files/css/cafod.less
+++ b/static_media/files/css/cafod.less
@@ -526,3 +526,10 @@ form hr{margin-top:10px; margin-bottom:10px;}
 	float:left;
 	height:100px;
 }
+
+.aportes{
+	text-align:center;
+	height:40px;
+	text-transform:uppercase;
+	line-height:40px;
+}
