--- a/templates/baseinterna.html
+++ b/templates/baseinterna.html
@@ -29,7 +29,7 @@
               <ul class="nav pull-right">
                   <li class="divider-vertical"></li>
                   {% if user.username %}
-                    <li ><a href="/foro/perfil">Bienvenido {{ user.username }}</a></li>
+                    <li ><a href="/foros/perfil">Bienvenido {{ user.username }}</a></li>
                     <li class="divider-vertical"></li>
                     <li><a href="/accounts/logout" title="Salir de Administración">Salir</a></li>
                   {% else %}
