--- a/templates/foros/crear_foro.html
+++ b/templates/foros/crear_foro.html
@@ -133,7 +133,7 @@
                                 </div>
                                 <div class="well" id="actionbuttons">
                                 <input class="btn btn-large btn-success " style="" type="submit" id="submitfoo" value="Guardar" />
-                                <a href="/notas/{{nota.id}}" class="btn btn-large">Cerrar</a>
+                                <a href="/foros" class="btn btn-large">Cerrar</a>
                                 </div>
                         </div>
                         </form>
