--- a/templates/privados/notas.html
+++ b/templates/privados/notas.html
@@ -13,10 +13,12 @@
 		    <div class="row">
 			    <div class="span5">
 			    	<div class="encabezado-title">
+			    		MIS NOTAS
 			  		</div>
 			    </div>
 			    <div class="span7">
 					<div class="btn-group filtrospais">
+						<a href="/notas/crear" class="btn"><i class="icon-plus-sign"></i>Crear nueva nota</a>
 					</div>
 			    </div>
 	        </div>
