arreglando el guardado de los genericos vacios

--- a/templates/notas/crear_nota.html
+++ b/templates/notas/crear_nota.html
@@ -1,5 +1,7 @@
 {% extends "baseadmin.html" %}
 {%block extra_js%}
+<link href="/files/css/jquery.autocomplete.css" rel="stylesheet" type="text/css">
+<script type="text/javascript" src="/files/js/autocompletejs/jquery.autocomplete.js"></script>
 <script type="text/javascript">
     $(document).ready(function(){
 		$('input').tooltip({'placement':'right'});
