aportes en foro

--- a/static_media/files/css/cafod.less
+++ b/static_media/files/css/cafod.less
@@ -533,3 +533,8 @@ form hr{margin-top:10px; margin-bottom:10px;}
 	text-transform:uppercase;
 	line-height:40px;
 }
+
+.raya{
+	border-bottom:#eee 1px solid;
+	margin-bottom:10px;
+}
