--- a/templates/foros/foro_list.html
+++ b/templates/foros/foro_list.html
@@ -26,7 +26,8 @@
 		{% for foro in object_list %}
 		<div class="row">
 			<div class="span2">
-				<div class="label label-warning aportes">{{foro.aportes_set.all|length}}</div>
+				<div class="label label-warning aportes">{{foro.aportes_set.all|length}} Aportes</div>
+
 			</div>
 			<div class="span10">
 				<a href="{{foro.get_absolute_url}}" class="titulo-medio">{{foro.nombre}}</a><hr>
