--- a/static_media/files/css/cafod.less
+++ b/static_media/files/css/cafod.less
@@ -552,3 +552,8 @@ form hr{margin-top:10px; margin-bottom:10px;}
 	margin-left:110px;
 	z-index:100;
 }
+
+.modal-video{
+	width:680px !important;
+	margin-left:-340px !important;
+}
