--- a/templates/agendas/crear_agenda.html
+++ b/templates/agendas/crear_agenda.html
@@ -1,5 +1,10 @@
 {% extends "base.html" %}
 
+{% block extra_js %}
+<link href="/files/css/jquery.autocomplete.css" rel="stylesheet" type="text/css">
+<script type="text/javascript" src="/files/js/autocompletejs/jquery.autocomplete.js"></script>
+{% endblock %}
+
 {% block contenido %}
 	<form enctype="multipart/form-data" action="." method="post" accept-charset="utf-8">{% csrf_token %}
 		{{ form.media }}
