--- a/static_media/files/css/cafod.less
+++ b/static_media/files/css/cafod.less
@@ -557,3 +557,8 @@ form hr{margin-top:10px; margin-bottom:10px;}
 	width:680px !important;
 	margin-left:-340px !important;
 }
+
+.user-info{
+	font-size:11px;
+	color:#646464;
+}
