adding fancybox and starting documents

--- a/static_media/files/css/cafod.less
+++ b/static_media/files/css/cafod.less
@@ -327,6 +327,13 @@ form hr{margin-top:10px; margin-bottom:10px;}
 	margin-bottom:15px;
 }
 
+#slider1{
+	.pager a{
+		padding:0px;
+		border:0px;
+	}
+}
+
 // Sidebar
 
 .sidebar-title{
