--- a/templates/baseadmin.html
+++ b/templates/baseadmin.html
@@ -14,6 +14,8 @@
   <link type="text/css" rel="stylesheet"  href="/files/css/jqueryui.css" >
   <link type="text/css" rel="stylesheet/less" href="/files/css/cafod.less">
   <script type="text/javascript" src="/files/js/less.min.js"></script>
+   <script type="text/javascript" src="/files/js/fancybox.pack.js"></script>
+  <link type="text/css" rel="stylesheet"  href="/files/css/jquery.fancybox.css" >
   <script type="text/javascript">
     $(function() {
     $("#id_apertura , #id_cierre , #id_fecha_skype , #id_memoria").datepicker({ 
