--- a/templates/baseinterna.html
+++ b/templates/baseinterna.html
@@ -14,6 +14,9 @@
 
   <link type="text/css" rel="stylesheet/less" href="/files/css/cafod.less">
   <script type="text/javascript" src="/files/js/less.min.js"></script>
+
+  <script type="text/javascript" src="/files/js/fancybox.pack.js"></script>
+  <link type="text/css" rel="stylesheet"  href="/files/css/jquery.fancybox.css" >
   {%block extra_js%}{%endblock%}
 </head>
 <body>
