--- a/templates/privados/documentos.html
+++ b/templates/privados/documentos.html
@@ -1,15 +1,57 @@
 {% extends "baseadmin.html" %}
 
 {% block contenido %}
-Tags<br>
-{% for tag in tags %}
-	<a href="/foros/privado/documento_tag/{{tag}}">{{tag}}</a><br>
-{% endfor %}
-<hr>
-	{% for a in documentos %}
-		{% if a.nombre_doc != '' %}
-			nombre: {{a.nombre_doc}}: {{a.adjunto}}<br>
-		{% endif %}
-	{% endfor %}
+<div class="row">
+    <div class="encabezado">
+      <div class="container">
+            <div class="row">
+                <div class="span5">
+                    <div class="encabezado-title">
+                        DOCUMENTOS
+                    </div>
+                </div>
+                <div class="span7">
+                </div>
+            </div>
+      </div>
+    </div>
+</div>
+<div class="row">
+	<div class="container">
+		<div class="row">
+			<div class="span3">
+				<ul class="nav nav-list well">
+					  <li class="nav-header">
+					    TAGS
+					  </li>
+				{% for tag in tags %}
+					<li><a href="/foros/privado/documento_tag/{{tag}}"><i class="icon-tag"></i>{{tag}}</a></li>
+				{% endfor %}
+				</ul>
+			</div>
+			<div class="span9">
+				<table class="table  table-bordered table-condensed table-striped">
+					<thead>
+						<tr>
+							<th>Nombre</th>
+							<th>descargar</th>
+						</tr>
+					</thead>
+					<tbody>
+						{% for a in documentos %}
+							{% if a.nombre_doc != '' %}
+								<tr>
+									<td>{{a.nombre_doc}}</td>
+									<td><a href="{{a.adjunto}}" class="btn"><i class="icon-download-alt"></i></a></td>
+								</tr>
+							{% endif %}
+						{% endfor %}
+					</tbody>
+				</table>
+			</div>
+		</div>
+	</div>
+</div>
+
 
 {% endblock %}
