--- a/templates/privados/documentos_tag.html
+++ b/templates/privados/documentos_tag.html
@@ -1,15 +1,66 @@
 {% extends "baseadmin.html" %}
 
 {% block contenido %}
-Tags<br>
-{% for tag in tags %}
-	<a href="/foros/privado/documento_tag/{{tag}}">{{tag}}</a><br>
-{% endfor %}
-<hr>
-	{% for a in todos %}
-		{% if a.nombre_doc != '' %}
-			nombre: {{a.nombre_doc}}: {{a.adjunto}}<br>
-		{% endif %}
-	{% endfor %}
+<div class="row">
+    <div class="encabezado">
+      <div class="container">
+            <div class="row">
+                <div class="span5">
+                    <div class="encabezado-title">
+                        DOCUMENTOS
+                    </div>
+                </div>
+                <div class="span7">
+                </div>
+            </div>
+      </div>
+    </div>
+</div>
+<div class="row">
+	<div class="container">
+		<div class="row">
+			<div class="span3">
+				<ul class="nav nav-list well">
+					  <li class="nav-header">
+					    BUSCAR
+					  </li>
+					  <li>
+						<form class="form-search form-inline">
+						  <input type="text" class="input-medium search-query" style="width:115px">
+						  <button type="submit" class="btn"><i class="icon-search button-icon"></i></button>
+						</form>
+					  </li>
+					  <li class="nav-header">
+					    TAGS
+					  </li>
+				{% for t in tags %}
+					<li {%if t.id == tag.id %} class="active"{%endif%} ><a href="/foros/privado/documento_tag/{{t}}"><i class="icon-tag"></i>{{t}}</a></li>
+				{% endfor %}
+				</ul>
+			</div>
+			<div class="span9">
+				<table class="table  table-bordered table-condensed table-striped">
+					<thead>
+						<tr>
+							<th width="610">Nombre del documento</th>
+							<th>descargar</th>
+						</tr>
+					</thead>
+					<tbody>
+						{% for a in todos %}
+							{% if a.nombre_doc != '' %}
+								<tr>
+									<td>{{a.nombre_doc}}</td>
+									<td><center><a href="/uploads/{{a.adjunto}}" class="btn btn-mini btn-info"><i class="icon-download-alt button-icon icon-white"></i></a></center></td>
+								</tr>
+							{% endif %}
+						{% endfor %}
+					</tbody>
+				</table>
+			</div>
+		</div>
+	</div>
+</div>
+
 
 {% endblock %}
