--- a/static_media/files/css/cafod.less
+++ b/static_media/files/css/cafod.less
@@ -569,3 +569,7 @@ form hr{margin-top:10px; margin-bottom:10px;}
 	font-size:11px;
 	color:#646464;
 }
+
+.button-icon{
+	margin-right:0px !important;
+}
