--- a/templates/foros/ver_foro.html
+++ b/templates/foros/ver_foro.html
@@ -7,6 +7,9 @@ $(document).ready(function() {
 	$(".fancybox").fancybox({
     	openEffect	: 'elastic',
     	closeEffect	: 'elastic',
+    	autoSize : true,
+    	width : 600,
+    	height : 1000,
 
     	helpers : {
     		title : {
