--- a/templates/base.html
+++ b/templates/base.html
@@ -61,7 +61,7 @@
                 </div>
                <div class="span6 bienvenida">
                    <div id="bienvenida-title">Programa Medios de Vida Sostenible </div>
-                   Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat a ante venenatis dapibus posuere velit aliquet. Sed posuere consectetur est at lobortis. Donec sed odio dui.
+                   Fortaleciendo la alianza entre las organizaciones socias del programa de medios de vida de CAFOD en Centroamérica para mejorar el aprendizaje e impacto de los proyectos.
                </div>
             </div>
           </div>
