--- a/templates/notas/notas_detail.html
+++ b/templates/notas/notas_detail.html
@@ -91,7 +91,7 @@ $(".alert").alert();
             </div>
             <div class="span5">
                 
-                <a class="contraparte-nota btn " href="/contrapartes/{{objects.contraparte.id}}"><img src="{{objects.contraparte.logo.url_70x60}}">{{object.contraparte.nombre}}</a>
+                <a class="contraparte-nota btn " href="/contrapartes/{{objects.contraparte.id}}"><img src="{{object.contraparte.logo.url_70x60}}">{{object.contraparte.nombre}}</a>
             </div>
         </div>
         <div class="row ">
