--- a/templates/registration/perfil.html
+++ b/templates/registration/perfil.html
@@ -20,10 +20,10 @@
             <div class="row">
                 <div class="span3">
                 	<div class="well">
-                		<div><img src="/files/img/avatar.png"></div>
+                		<div><img src="{{user.userprofile.avatar.url_70x60}}"></div>
                 		<div>{{user.username}}</div>
                 		<div>{{user.email}}</div>
-                		<a href="#" class="btn">Editar</a>
+                		<a href="/contrapartes/usuario/editar/" class="btn">Editar</a>
                 	</div>
                 </div>
                 <div class="span3">
