--- a/templates/privados/notas.html
+++ b/templates/privados/notas.html
@@ -42,9 +42,9 @@
 				</div>
 				<div class="span9">
 						<div class="extrainfo">{{nota.fecha}}  |  {{nota.pais.nombre}} | {{nota.contraparte.nombre}}</div>
-						<a href="{{nota.get_absolute_url}}" class="titulo-medio">{{nota.titulo}}</a><br>
+						<a href="/notas/ver/{{nota.id}}" class="titulo-medio">{{nota.titulo}}</a><br>
 						{{nota.contenido|safe|truncatewords_html:50}} <br><br>
-						<a href="" class="btn btn-success btn-mini">Leer mas</a>
+						<a href="/notas/ver/{{nota.id}}" class="btn btn-success btn-mini">Leer mas</a>
 				</div>
 			</div>
 			<hr>
